# KTV

./: .gitignore  README.md  analysis.ipynb  cluster_and_rank_keyframes.py  cluster_keyframe_and_order.py  dataset.py  experiment_tracking.py  extract_frame_features.py  keyframe_select_new.py  prompt.py  pyproject.toml  query_aware_select_keyframes.py  query_aware_upper_bound_utils.py  report_query_aware_upper_bound.py  report_temporal_chain_first_frame_sweep.py  report_temporal_chain_score_normalizer_sweep.py  run_all_tokens_experiments.sh  run_inference_multiple_choice_qa.py  run_query_aware_upper_bound_experiments.sh  run_temporal_chain_experiments.sh  runcode.sh  temporal_chain_keyframe_and_order.py  temporal_chain_rank_keyframes.py  temporal_chain_rank_keyframes_first_frame.py  temporal_chain_rank_keyframes_multiprocess.py  temporal_chain_seed_strategies.py  utils.py
docs/: temporal_chain_first_frame_strategies.md
eval/: compute_accuracy.py  eval_multiple_choice_qa.py
ktv/: __init__.py
playground/: update_notebook.py  visualization.ipynb
scripts/: backfill_mlflow_runs.py  compare_experiments.py  dashboard.py  find_latest_log.sh  minimize_mlflow_metrics.py  reorganize_outputs.py  resume_temporal_chain_missing_sweeps.sh  resume_temporal_chain_videomme_lookahead_sweep.sh  resume_temporal_chain_videomme_lookahead_sweep_parallel.sh  run_original_ktv_all_datasets.sh  run_stage1_only_ktv_all_datasets.sh  run_temporal_chain_all_datasets.sh  run_temporal_chain_clustering_sweep.sh  run_temporal_chain_egoschema_sweep.sh  run_temporal_chain_first_frame_strategy_sweep.sh  run_temporal_chain_intentqa_sweep.sh  run_temporal_chain_keyframe_sweep_all_datasets.sh  run_temporal_chain_nextqa_sweep.sh  run_temporal_chain_score_normalizer_sweep.sh  run_temporal_chain_videomme_lookahead_sweep.sh  run_temporal_chain_videomme_sweep.sh  (+2 more)
(+70 files in other folders)
