[project]
name = "ktv"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "av>=17.0.1",
    "clip @ git+https://github.com/openai/CLIP.git",
    "decord>=0.6.0",
    "hydra-core>=1.3.2",
    "numpy<2",
    "omegaconf>=2.3.0",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
include = ["ktv*"]
